--- a/package.json
+++ b/package.json
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/OsmanRana/webpack-practice-one/issues"
   },
-  "homepage": "https://github.com/OsmanRana/webpack-practice-one#readme"
+  "homepage": "https://github.com/OsmanRana/webpack-practice-one#readme",
+  "devDependencies": {
+    "html-webpack-plugin": "^5.5.0",
+    "webpack": "^5.73.0",
+    "webpack-cli": "^4.10.0"
+  }
 }
